--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Bkoumtak.GitHub.io</h1>
+      <h1 class="title">Welcome to bkoumtak's Page!</h1>
     </header>
     <div id="container">
       <p class="tagline"></p>
